--- a/pagina-de-produto/promos/produtos/765801.html
+++ b/pagina-de-produto/promos/produtos/765801.html
@@ -30,7 +30,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ffffff; /* 🎨 Cor de fundo durante o carregamento */
+    background: #fefefd; /* 🎨 Cor de fundo durante o carregamento */
     display: flex;
     justify-content: center;
     align-items: center;
