--- a/inicio/produtos/pagina/shopee.html
+++ b/inicio/produtos/pagina/shopee.html
@@ -1197,7 +1197,7 @@ Shopify.routes.root = "https://zhp02c-hv.myshopify.com/";</script>
                                                     src="../../../pagina-de-produto/promos/imagens/imagem-galeria-produto-01/imagem-capa-01.jpg" alt="Escorredor de Louças Suspenso Grande Com Porta Multifuncional + Brinde Exclusivo 🎁">
                                                 <div class="ASHFQu">
                                                     <div class="mMkiGi rJj4h7" style="color: rgb(242, 82, 32);"><span
-                                                            class="_2Gy7KU">Cupom Aplicado ✅</span></div>
+                                                            class="_2Gy7KU">Cupom Ativo ✅</span></div>
                                                 </div>
                                                 <div class="_9KHblc">
                                                     <div class="customized-overlay-image"
@@ -1368,7 +1368,7 @@ Shopify.routes.root = "https://zhp02c-hv.myshopify.com/";</script>
                                                     src="../../../pagina-de-produto/promos/imagens/imagem-galeria-produto-02/imagem-capa-01.jpg" alt="Escorredor de Louças Suspenso Grande Com Porta Multifuncional + Brinde Exclusivo 🎁 02">
                                                 <div class="ASHFQu">
                                                     <div class="mMkiGi rJj4h7" style="color: rgb(242, 82, 32);"><span
-                                                            class="_2Gy7KU">Cupom Aplicado ✅</span></div>
+                                                            class="_2Gy7KU">Cupom Ativo ✅</span></div>
                                                 </div>
                                                 <div class="_9KHblc">
                                                     <div class="customized-overlay-image"
@@ -1539,7 +1539,7 @@ Shopify.routes.root = "https://zhp02c-hv.myshopify.com/";</script>
                                                     src="../../../pagina-de-produto/promos/imagens/imagem-galeria-produto-03/imagem-capa-01.jpg" alt="Escorredor de Louças Suspenso Grande Com Porta Multifuncional + Brinde Exclusivo 🎁 03">
                                                 <div class="ASHFQu">
                                                     <div class="mMkiGi rJj4h7" style="color: rgb(242, 82, 32);"><span
-                                                            class="_2Gy7KU">Cupom Aplicado ✅</span></div>
+                                                            class="_2Gy7KU">Cupom Ativo ✅</span></div>
                                                 </div>
                                                 <div class="_9KHblc">
                                                     <div class="customized-overlay-image"
@@ -1710,7 +1710,7 @@ Shopify.routes.root = "https://zhp02c-hv.myshopify.com/";</script>
                                                     src="../../../pagina-de-produto/promos/imagens/imagem-galeria-produto-04/imagem-capa-01.jpg" alt="Escorredor de Louças Suspenso Grande Com Porta Multifuncional + Brinde Exclusivo 🎁 04">
                                                 <div class="ASHFQu">
                                                     <div class="mMkiGi rJj4h7" style="color: rgb(242, 82, 32);"><span
-                                                            class="_2Gy7KU">Cupom Aplicado ✅</span></div>
+                                                            class="_2Gy7KU">Cupom Ativo ✅</span></div>
                                                 </div>
                                                 <div class="_9KHblc">
                                                     <div class="customized-overlay-image"
