--- a/pagina-de-produto/promos/produtos/765800.html
+++ b/pagina-de-produto/promos/produtos/765800.html
@@ -4179,7 +4179,7 @@ document.addEventListener('DOMContentLoaded', () => {
                                                       <button
   type="button"
   style="width: 100%; border: none; height: 100%; background: #00bfa5;"
-  onclick="window.location.href=https://app.zedy.com.br/api/public/shopify?product=275453493345&store=2754"
+  href="https://app.zedy.com.br/api/public/shopify?product=275453493345&store=2754"
 >
   <svg enable-background="new 0 0 15 15" viewBox="0 0 15 15" role="img"
       class="stardust-icon stardust-icon-add-to-cart product-bottom-panel__add-to-cart-icon">
