--- a/pagina-de-produto/promos/produtos/765800.html
+++ b/pagina-de-produto/promos/produtos/765800.html
@@ -4163,7 +4163,7 @@ document.addEventListener('DOMContentLoaded', () => {
                                             <div class="product-bottom-panel__separator-real"></div>
                                         </div>
 
-                                      
+                                        <!-- SCRIPT DE BOTÃO DE COMPRA | TROCA DE FORM A FORM | ESTE TRECHO TEM 2 FRASES; ADICIONAR AO CARRINHO E COMPRE AGORA -->
                                         <div class="product-cart-and-buy-buttons">
   <input type="hidden" id="var-id2" value="45663925666004">
   <input type="number" id="quantity2" min="1" value="1" style="display:none;">
@@ -4208,6 +4208,7 @@ document.addEventListener('DOMContentLoaded', () => {
     window.location.href = finalURL;
   }
 </script>
+<!-- SCRIPT DE BOTÃO DE COMPRA -->
 
 
                                       
