--- a/pagina-de-produto/promos/produtos/765801.html
+++ b/pagina-de-produto/promos/produtos/765801.html
@@ -2204,35 +2204,35 @@ document.addEventListener("DOMContentLoaded", function() {
   <div class="variation-wrapper">
     <img src="../imagens/imagem-galeria-produto-02/variação-preto.png"
          class="variation-image"
-         data-checkout-link="https://app.zedy.com.br/api/public/shopify?product=275481917925&store=2754"
+         data-checkout-link="fonepreto.html"
          alt="Variação 1">
   </div>
 
   <div class="variation-wrapper">
     <img src="../imagens/imagem-galeria-produto-02/variação-rosa.png"
          class="variation-image"
-         data-checkout-link="https://app.zedy.com.br/api/public/shopify?product=275481917925&store=2754"
+         data-checkout-link="fonerosa.html"
          alt="Variação 2">
   </div>
 
   <div class="variation-wrapper">
     <img src="../imagens/imagem-galeria-produto-02/variação-branco.png"
          class="variation-image"
-         data-checkout-link="https://app.zedy.com.br/api/public/shopify?product=275454461649&store=2754"
+         data-checkout-link="fonebranco.html"
          alt="Variação 3">
   </div>
 
   <div class="variation-wrapper">
     <img src="../imagens/imagem-galeria-produto-02/variação-azul.png"
          class="variation-image"
-         data-checkout-link="https://app.zedy.com.br/api/public/shopify?product=275468536536&store=2754"
+         data-checkout-link="foneazul.html"
          alt="Variação 4">
   </div>
 
   <div class="variation-wrapper">
     <img src="../imagens/imagem-galeria-produto-02/variação-roxo.png"
          class="variation-image"
-         data-checkout-link="https://app.zedy.com.br/api/public/shopify?product=275474632685&store=2754"
+         data-checkout-link="foneroxo.html"
          alt="Variação 5">
   </div>
 </div>
